fixed overflow scrollbar seizure

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: hidden;
 }
 
 #container {
